Fix icons not overflowing by changing projects animation

--- a/src/index.css
+++ b/src/index.css
@@ -234,7 +234,6 @@ nav li {
   margin: 0 -1000px;
   font-size: 0.8rem;
   opacity: 0;
-  overflow: hidden;
   white-space: nowrap;
 }
 
@@ -248,6 +247,10 @@ nav li {
   flex-direction: row;
   gap: 3rem;
 }
+
+/* .projects:last-child {
+  margin: 0 0 0 2rem;
+} */
 
 .project {
   display: flex;
@@ -286,40 +289,40 @@ nav li {
 
 /* ### Animations ### */
 .fade-in {
-  transition: opacity 0.8s;
+  transition: opacity 0.5s;
   opacity: 1;
 }
 
 .fade-out {
-  transition: opacity 0.8s;
+  transition: opacity 0.5s;
   opacity: 0;
 }
 
-.slide-vert-container {
-  overflow-y: hidden;
-}
-
 .slide-down-up {
-  transition: all 1.2s ease;
+  transition: all 1s ease;
   top: 0%;
+  opacity: 1;
   position: relative;
 }
 
 .slide-down-up.reverse {
-  transition: all 1s cubic-bezier(0.5, 0.5, 0.5, 1);
+  transition: top 1s cubic-bezier(0.5, 0.5, 0.5, 1);
   top: 100%;
+  opacity: 0;
   position: relative;
 }
 
 .slide-up-down {
-  transition: all 1.2s ease;
+  transition: all 1s ease;
   bottom: 0%;
+  opacity: 1;
   position: relative;
 }
 
 .slide-up-down.reverse {
-  transition: all 1s cubic-bezier(0.5, 0.5, 0.5, 1);
+  transition: bottom 1s cubic-bezier(0.5, 0.5, 0.5, 1);
   bottom: 100%;
+  opacity: 0;
   position: relative;
 }
 
@@ -330,7 +333,7 @@ nav li {
 }
 
 .slide-left-right.reverse {
-  transition: all 1.2s cubic-bezier(0, 1, 0.5, 1);
+  transition: bottom 1.2s cubic-bezier(0, 1, 0.5, 1);
   right: 100%;
   position: relative;
 }
